<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_round_bg2"
    android:id="@+id/loginContainer"
    >
    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </SurfaceView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/transition6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="測試特效效果"
            android:textSize="40sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.2"
            android:transitionName="transition6"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contTopBar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:transitionName="transition1"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/logo"
            app:layout_constraintWidth_percent="0.85">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:textColor="#ffffff"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTourist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/login_tourist"
                android:textColor="@color/dark_indigo_color"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/conEditName"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_edit_text_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contTopBar"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintWidth_percent="0.85"

            >


            <EditText
                android:id="@+id/ed_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/login_account"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:transitionName="transition2"
                android:textColor="@color/light_sky_blue_color"
                android:textColorHint="@color/light_sky_blue_color"
                android:textSize="12sp" />


            <ImageView
                android:id="@+id/imgCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:id="@+id/LinInputAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/conEditName">


            <TextView
                android:id="@+id/tvLoginAccountMsg"
                android:textColor="#ff00ff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/login_input_account" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/conEditPwd"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/login_edit_text_bg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LinInputAccount"
            app:layout_constraintWidth_percent="0.85"

            >


            <EditText
                android:id="@+id/editPwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/login_pwd"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:transitionName="transition3"

                android:textColor="@color/light_sky_blue_color"
                android:textColorHint="@color/light_sky_blue_color"
                android:textSize="12sp" />


            <ImageView
                android:id="@+id/imgEye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:src="@drawable/abc_vector_test"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/conRememberPwd"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="25dp"
            app:layout_constraintHeight_percent="0.05"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:transitionName="transition4"

            app:layout_constraintTop_toBottomOf="@+id/conEditPwd"
            app:layout_constraintWidth_percent="0.85">

            <CheckBox
                android:id="@+id/chboxRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:textColor="#ff00ff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/login_remember_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/chboxRemember"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvForgerPwd"
                android:textColor="#ff00ff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_forget_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/conRememberPwd">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/login_red_bottom"
                android:text="@string/login_login"
                android:textColor="#ffffff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintWidth_percent="0.85"
                android:transitionName="transition5"

                />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/login_red_bottom"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/abc_vector_test" />

                <TextView
                    android:textColor="#ff00ff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="登入失敗，請輸入完整資訊。" />

            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>